<resources>
    <string name="app_name">NoteApp</string>

    <string name="description_fab">Button</string>

    <string name="tag_fragment">Fragment Tag</string>

    <string name="sort">Sort</string>
    <string name="undo">Undo</string>

    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="color">Color</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="exception">Exception Occurs</string>

    <string name="hint_title">Enter title…</string>
    <string name="hint_content">Enter Some content</string>

    <string name="message_delete">Note Deleted</string>
    <string name="message_empty_title">Title Empty</string>
    <string name="message_empty_content">Content Empty</string>
</resources>